# alba-engine

./: .clang-format  .gitignore  build.bat  helpers.h  main.cpp  meson.build  shader.cpp  shader.h  string_manager.cpp  string_manager.h
ecs/: archetype.cpp  archetype.h  component.cpp  component.h  world.h
engine/: config.h  engine_app.cpp  engine_app.h  engine_application.cpp  engine_application.h  main.cpp  string_manager.cpp  string_manager.h
engine/crypto/: arc_4.cpp  arc_4.h  crypro_constants.h  crypto_hash.h  crypto_hmac.h  crypto_random.cpp  crypto_random.h  srp_6.cpp  srp_6.h
engine/datasource/mpq/: mpq_archive.cpp  mpq_archive.h  mpq_chain.cpp  mpq_chain.h  mpq_file.cpp  mpq_file.h
engine/network/: auth_connection.cpp  auth_connection.h  auth_crypt.cpp  auth_crypt.h  auth_defines.h  auth_session.cpp  auth_session.h  byte_buffer.cpp  byte_buffer.h  opcodes.h  packet.cpp  packet.h  srp.cpp  srp.h  srp6.cpp  srp6.h  world_session.cpp  world_session.h
engine/render/: shader.cpp  shader.h
engine/time/: scope_timer.h
engine/utils/: big_num.cpp  big_num.h  byte_buffer.cpp  byte_buffer.h  endianness.h  types.h
game/: game_app.cpp  game_app.h
mt/: job.cpp  job.h  job_queue.cpp  job_queue.h  spin_lock.cpp  spin_lock.h  thread_pool.cpp  thread_pool.h  worker_thread.cpp  worker_thread.h
project/: project_application.cpp  project_application.h
subprojects/: eastl.wrap  imgui.wrap
time/: scope_timer.h
